<resources>
    <string name="app_name">FMSClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="display_family_lines">Display Family Lines</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="eventTile">Life Events</string>
    <string name="relativeTitle">Family</string>
    <string name="event_info">Event Info</string>
    <string name="family_info">family info</string>
    <string name="display_story_lines">Display Story Lines</string>
    <string name="display_family_lines">Display Family Lines</string>
    <string name="display_spouse_lines">Display Spouse Lines</string>
    <string name="filter_by_father_s_side">Filter by Father\'s Side</string>
    <string name="filter_by_mother_s_side">Filter by Mother\'s Side</string>
    <string name="filter_by_male_events">Filter by Male Events</string>
    <string name="filter_by_female_events">Filter by Female Events</string>
    <string name="logout">Logout</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="last_name">Last Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="first_name">First Name</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="server_host">Server Host</string>
    <string name="server_host">Server Host</string>
    <string name="server_port">Server Port</string>
    <string name="server_port">Server Port</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="click_marker_to_find_information">Click marker to find Information</string>
    <string name="logout">Logout</string>
</resources>